data/derived/comb/progs/unify/prog8827.ml.out
Characters 150-165:
  |Average (e1, e2) -> ((exprToString e1 + exprToString e2)/2)
                         ^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         int
